--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -23,6 +23,14 @@ body {
   min-height: 100dvh;
   max-width: 1440px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+body > div {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 /* responsive images/videos */
