--- a/src/components/dropdown/Dropdown.module.scss
+++ b/src/components/dropdown/Dropdown.module.scss
@@ -1,10 +1,9 @@
 @use 'styles/abstracts' as a;
 
 button {
+  @include a.flex-between;
   width: 100%;
   border: none;
-  display: flex;
-  justify-content: space-between;
   background-color: a.$color-base;
   padding: 0.5em 1em;
   border-radius: a.$bdrs-sm;
