style(Dropdown):add cursor:pointer to the button element of the Dropdown component

--- a/src/components/dropdown/Dropdown.module.scss
+++ b/src/components/dropdown/Dropdown.module.scss
@@ -8,6 +8,7 @@ button {
   padding: 0.5em 1em;
   border-radius: a.$bdrs-sm;
   font-size: clamp(0.75em, 3vw, 1.3em);
+  cursor: pointer;
 
   .title {
     color: a.$color-title;
