--- a/src/pages/about/About.module.scss
+++ b/src/pages/about/About.module.scss
@@ -1,12 +1,14 @@
 @use 'styles/abstracts' as a;
 
 .about {
-  // min-height: 100dvh;
-  // min-height: 100vh;
   flex-grow: 1;
   margin: 24px clamp(0px, 7vw, 100px);
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: a.$gap-about;
+
+  & > :first-child {
+    height: 223px;
+  }
 }
