--- a/src/components/carousel/Carousel.module.scss
+++ b/src/components/carousel/Carousel.module.scss
@@ -1,7 +1,7 @@
 @use 'styles/abstracts' as a;
 
 .section {
-  margin: 0 clamp(20px, 10vw + 2px, 100px);
+  margin: 0 clamp(0px, 7vw, 100px);
   display: grid;
   grid-template: 'stack' 1fr;
   place-items: center;
